vlib/v/checker/tests/const_field_name_duplicate_err.vv
const aaa = 1
cosnt aaa = 2

fn main() {
	println(aaa)
}
